hphp/hack/test/typecheck/named_parameters/named_params_arity_kitchen_sink.php.exp
ERROR: File "named_params_arity_kitchen_sink.php", line 8, characters 3-9:
Missing required named arguments: x, y, z (Typing[4499])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 8, characters 3-9:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 9, characters 3-6:
Missing required named argument: x (Typing[4499])
  File "named_params_arity_kitchen_sink.php", line 3, characters 10-11:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 10, characters 3-27:
Missing required named arguments: x, y, z (Typing[4499])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 10, characters 3-27:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 10, characters 3-27:
Unexpected named arguments: extra1, extra2 (Typing[4500])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 11, characters 3-35:
Missing required named arguments: x, y, z (Typing[4499])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 11, characters 3-35:
Too many arguments (expected 1 but got 2) (Typing[4105])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
ERROR: File "named_params_arity_kitchen_sink.php", line 11, characters 3-35:
Unexpected named arguments: extra1, extra2 (Typing[4500])
  File "named_params_arity_kitchen_sink.php", line 4, characters 10-14:
  Definition is here
